--- a/package.json
+++ b/package.json
@@ -12,6 +12,12 @@
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-roving-focus": "^1.1.0",
+    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.1",
+    "@radix-ui/themes": "^3.1.5",
     "@subframe/core": "^1.127.0",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.3.2",
